fix: operation type in transactions
